Stalker Changes:
v0.1.0.20101228.1:
 * added repositories table and mapper for the repository.Repsotiry class

v0.1.0.20101228:
 * created the block of database tests
 * added stalker.db.meta.__mappers__ list to hold the mappers and use it to
   check if anything is already mapped
 * added tests for db initialization
 * removed the whole stalker.models.unit module from SOM, only TimeUnit was
   usable in some cases, but in fact it is also not important, the only object
   using TimeUnit was the Project class and it can go well without it. Don't
   need to make things more complex than it needs to be.
 * increased the version number to 0.1.0 to follow the stalker roadmap

v0.0.1.20101227:
 * the test_db is converted to a proper unittest which is testing all the
   models one by one
 * test/db renamed to test/z_db to let nose run it latest to solve the problem
   about mocker and sqlalchemy fighting each other.
 * Mapping syntax is changed a little bit, now to do the mapping, the
   <mapper>.setup() function needs to be called to be able to do the mapping
   any time
 * started adding tests for every class in SOM

v0.0.1.20101226:
 * in user.User the last_name attribute could be an empty string
 * removed SimpleEntity, TaggedEntity and introduced StatusedEntity to make the
   inheritance clear and let users to find somebody to blame by moving all the
   audit information to the the SimpleEntity class in which everything is
   inherited from. Now even a Tag has audit information.

v0.0.1.20101225:
 * entity.AuditEntity.created_by can now be None (for now)
 * user.User.last_name can now be None, to let users like admin have no last
   name
 * creating tables for catch the general inheritance of the entity classes
 * entitiy.SimpleEntity.name's first letter is not capitilized anymore
 * department.Department class now accpets Null for lead attribute (for now
   again)

v0.0.1.20101224:
 * started playing with the SQLAlchemy side of the system
 
v0.0.1.20101223: