@@ -1,14 +1,14 @@
 <!-- Tufts VUE 3.0.2 concept-map (stalker_design.vue) 2010-12-29 -->
 <!-- Tufts VUE: http://vue.tufts.edu/ -->
 <!-- Do Not Remove: VUE mapping @version(1.1) jar:file:/usr/share/vue/VUE.jar!/tufts/vue/resources/lw_mapping_1_1.xml -->
-<!-- Do Not Remove: Saved date Wed Dec 29 02:38:16 EET 2010 by ozgur on platform Linux 2.6.35-24-generic in JVM 1.6.0_22-b04 -->
+<!-- Do Not Remove: Saved date Wed Dec 29 02:57:50 EET 2010 by ozgur on platform Linux 2.6.35-24-generic in JVM 1.6.0_22-b04 -->
 <!-- Do Not Remove: Saving version @(#)VUE: built July 1 2010 at 1436 by vue on Linux 2.4.21-57.EL i386 JVM 1.5.0_06-b05(bits=32) -->
 <?xml version="1.0" encoding="US-ASCII"?>
 <LW-MAP xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:noNamespaceSchemaLocation="none" ID="0"
     label="stalker_design.vue" created="0" x="0.0" y="0.0"
     width="4290.8525" height="4686.808" strokeWidth="0.0" autoSized="false">
-    <resource referenceCreated="1293583096180" size="428986"
+    <resource referenceCreated="1293584270428" size="428986"
         spec="/home/ozgur/Documents/development/stalker/docs/source/_static/stalker_design.vue"
         type="1" xsi:type="URLResource">
         <title>stalker_design.vue</title>
@@ -3269,7 +3269,7 @@
         <shape arcwidth="20.0" archeight="20.0" xsi:type="roundRect"/>
     </child>
     <child ID="1465" label="ImageFormat" layerID="1"
-        created="1277508730708" x="10232.845" y="797.0019" width="165.0"
+        created="1277508730708" x="10232.845" y="797.0019" width="147.0"
         height="127.25" strokeWidth="1.0" autoSized="true" xsi:type="node">
         <fillColor>#9DDB53</fillColor>
         <strokeColor>#776D6D</strokeColor>
@@ -3323,8 +3323,8 @@
             <URIString>http://vue.tufts.edu/rdf/resource/7175e3647f0001010a530461a525aa4a</URIString>
             <shape arcwidth="20.0" archeight="20.0" xsi:type="roundRect"/>
         </child>
-        <child ID="1471" label="device_aspect_ratio | FLOAT"
-            created="1277508818841" x="34.0" y="63.5" width="167.0"
+        <child ID="1471" label="device_aspect | FLOAT"
+            created="1277508818841" x="34.0" y="63.5" width="136.0"
             height="23.0" strokeWidth="1.0" autoSized="true" xsi:type="node">
             <fillColor>#F2AE45</fillColor>
             <strokeColor>#776D6D</strokeColor>
@@ -3342,8 +3342,8 @@
             <URIString>http://vue.tufts.edu/rdf/resource/7175e3657f0001010a530461d423e0c0</URIString>
             <shape arcwidth="20.0" archeight="20.0" xsi:type="roundRect"/>
         </child>
-        <child ID="1470" label="pixel_aspect_ratio | FLOAT"
-            created="1277508794355" x="34.0" y="83.75" width="157.0"
+        <child ID="1470" label="pixel_aspect | FLOAT"
+            created="1277508794355" x="34.0" y="83.75" width="126.0"
             height="23.0" strokeWidth="1.0" autoSized="true" xsi:type="node">
             <fillColor>#F2AE45</fillColor>
             <strokeColor>#776D6D</strokeColor>
@@ -4082,8 +4082,8 @@
         <ctrlPoint0 x="10503.179" y="758.3768" xsi:type="point"/>
         <ctrlPoint1 x="10123.725" y="721.8007" xsi:type="point"/>
     </child>
-    <child ID="1915" layerID="1" created="1288257624543" x="10314.911"
-        y="622.75" width="188.12695" height="174.75" strokeWidth="1.0"
+    <child ID="1915" layerID="1" created="1288257624543" x="10309.928"
+        y="622.75" width="193.11035" height="174.75" strokeWidth="1.0"
         autoSized="false" controlCount="2" arrowState="2" xsi:type="link">
         <strokeColor>#000000</strokeColor>
         <textColor>#000000</textColor>
@@ -4099,7 +4099,7 @@
         </metadata-list>
         <URIString>http://vue.tufts.edu/rdf/resource/f22534227f0001010d9438de64236ba0</URIString>
         <point1 x="10502.538" y="623.25"/>
-        <point2 x="10315.411" y="797.0"/>
+        <point2 x="10310.428" y="797.0"/>
         <ID1 xsi:type="node">1887</ID1>
         <ID2 xsi:type="node">1465</ID2>
         <ctrlPoint0 x="10506.553" y="759.0667" xsi:type="point"/>
