@@ -1,0 +1,37 @@
+Stalker Development Roadmap
+***************************
+
+This section describes the direction Stalker is going.
+
+Roadmap Based on Versions
+=========================
+
+Below you can find the roadmap based on the version
+
+0.1.0:
+------
+ * A complete working set of models in SOM
+
+0.2.0:
+------
+ * The SQLAlchemy integration to have the database part, tables and mappers
+
+0.3.0:
+------
+ * Ability to extend SOM
+
+0.5.0:
+------
+ * Interactions with host programs (MAYA, NUKE, HOUDINI etc.)
+
+1.0.0:
+------
+ * PyQt/PySide interfaces
+
+1.5.0:
+------
+ * Web interface
+
+2.0.0:
+------
+ * New feature that I can't really see right now.
